--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#section4" class="colorBlack">Services</a>
                 <a href="#section5" class="colorBlack">Reviews</a>
                 <a href="#section6" class="colorBlack">Contact</a>
-                <button class="bgGreen colorWhite contactUsBtn">Contact Us</button>
+                <a href="#section6" class="contactUsBtn">Contact Us</a>
             </div>
             
         </nav>
@@ -252,32 +252,7 @@
     </div>
 
     <div class="section5clients">
-        <div class="section5client">
-            <div class="section5clientImage">
-                <img src="./images/profile1.jpg" alt="" class="clientImage">
-
-            </div>
-            <div class="section5clientDescription">
-                <span class="material-symbols-outlined">
-                    chat
-                    </span>
-<p class="clientDescription">Bani Garden turned our vision of a lush and inviting garden into a reality.</p>
-<h1 class="clientName">Lunk Mark</h1>
-            </div>
-        </div>
-        <div class="section5client">
-            <div class="section5clientImage">
-                <img src="./images/profile2.jpg" alt="" class="clientImage">
-
-            </div>
-            <div class="section5clientDescription">
-                <span class="material-symbols-outlined">
-                    chat
-                </span>
-<p class="clientDescription">Bani Garden turned our vision of a lush and inviting garden into a reality.</p>
-<h1 class="clientName">Maria Tunes</h1>
-            </div>
-        </div>
+       
     </div>
 
     <div class="section5circles ">
