--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
               </div>
               <div class="section1Content">
                 <img src="./images/section1-flower-image.jpg" alt="Flower" width="80px">
-                <h1 class="section1Title">Crafting Natural Beauty</h1>
+                <h1 class="section1Title">Crafting Natural Beautys</h1>
                 <p class="section1Description">Eleveate your sorroundings and experience the allure of nature in your own backyard</p>
                 <div class="section1ContentButtons">
                     <button class="contactUsBtn">Contact Us</button>
